--- a/Config-Server/src/main/resources/application.yml
+++ b/Config-Server/src/main/resources/application.yml
@@ -13,4 +13,4 @@ spring:
           #          username: user
           #          password: 123123
           clone-on-start: true
-          search-paths: config
+          search-paths: master
