--- a/Config-Server/src/main/resources/application.yml
+++ b/Config-Server/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
       server:
         git:
           uri: https://github.com/grizlen/SimlpeCRM
-          default-label: config
+          default-label: master
           #          username: user
           #          password: 123123
           clone-on-start: true
-          search-paths: master
+          search-paths: config
